# test_uv

./: .gitignore  README.md  data.py  main.py  model.py  pyproject.toml  requirements.txt
