[project]
name = "test-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "pandas>=2.3.3",
    "numpy>=2.4.0",
    "scikit-learn>=1.5.0",
    "nbconvert>=7.16.6",
    "torch>=2.2.0",
    "gdown>=5.2.0",
    "typer>=0.21.1",
    "matplotlib>=3.10.8",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
dataframes = [
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
